# algorithm

./: .gitignore  CMakeLists.txt  README.md  _test.cpp  a.out  config-unix.cmake  config-win32.cmake
Codes/第二章-复杂度分析/: recursion_iteration.cpp
LeetCode刷题/: 1.01背包.cpp  1.两数之和.cpp  100.相同的树.cpp  101.对称二叉树.cpp  1019.链表中的下一个更大节点.cpp  102.二叉树的层序遍历.cpp  1022.从根到叶的二进制数之和.cpp  104.二叉树的最大深度.cpp  1049.最后一块石头的重量-ii.py  105.从前序与中序遍历序列构造二叉树.cpp  106.从中序与后序遍历序列构造二叉树.cpp  1091.二进制矩阵中的最短路径.py  1094.拼车.cpp  110.平衡二叉树.cpp  1109.航班预订统计.cpp  111.二叉树的最小深度.cpp  112.路径总和.cpp  113.路径总和-ii.cpp  114.二叉树展开为链表.cpp  116.填充每个节点的下一个右侧节点指针.cpp  1161.最大层内元素和.cpp  120.三角形最小路径和.py  129.求根节点到叶节点数字之和.cpp  1302.层数最深叶子节点的和.cpp  1315.祖父节点值为偶数的节点和.cpp  1325.删除给定值的叶子节点.cpp  1367.二叉树中的链表.cpp  139.单词拆分.py  141.环形链表.cpp  142.环形链表-ii.cpp  143.重排链表.cpp  144.二叉树的前序遍历.cpp  1448.统计二叉树中好节点的数目.cpp  145.二叉树的后序遍历.cpp  1457.二叉树中的伪回文路径.cpp  146.lru-缓存.cpp  150.逆波兰表达式求值.cpp  151.反转字符串中的单词.cpp  160.相交链表.cpp  1609.奇偶树.cpp  (+104 more)
buaa/: .gitignore  CMakeLists.txt
buaa/AddressBook/: CMakeLists.txt  main.c
buaa/AddressBook/.buildme/: AddressBook  CMakeCache.txt  Makefile  cmake_install.cmake
buaa/Binary/: CMakeLists.txt  main.c
buaa/DPMaxNum/: CMakeLists.txt  main.c
buaa/DataLocation/: CMakeLists.txt  main.c
buaa/DigitalTower/: CMakeLists.txt  main.c
buaa/Dp/: CMakeLists.txt  main.c
buaa/Graph/: CMakeLists.txt  main.c
buaa/HeapAndvector/: CMakeLists.txt  main.c
buaa/HeapAndvector/.buildme/: CMakeCache.txt  HeapAndvector  Makefile  cmake_install.cmake
buaa/MaxHeight/: CMakeLists.txt  main.c
buaa/Reservoir/: CMakeLists.txt  main.c
docs/历届获奖名单/: tips.md
docs/获奖名单/: tips.md
docs/蓝桥杯VIP试题完整版/: 历届试题及答案(整理201504).docx  最小公倍数和最大公约数.c  逆序打印字符串.c
docs/蓝桥杯历年真题/第1届蓝桥杯大赛个人赛省赛（软件类）真题/: 第一届蓝桥杯大赛试题.txt
docs/蓝桥杯历年真题/第2届蓝桥杯大赛个人赛省赛（软件类）真题/: 2011年蓝桥杯预赛题目答案.doc
docs/蓝桥杯历年真题/第4届蓝桥杯大赛个人赛省赛（软件类）真题/: C本科A组.doc  C本科B组.doc
docs/蓝桥杯试题资料/南阳OJ部分习题及解答/: 1-A+B Problem.c  1-ReadMe.txt  101-两点距离.c  108-士兵杀敌（1）.c  11-奇偶数分离.c  113-字符串替换.c  13-Fibonacci数.c  198-数数.c  2-括号配对问题.c  206-矩形的个数.c  22-素数求和.c  24-素数距离问题.c  241-字母统计.c  243-交换输出.c  255-C小加随机数.c  259-茵茵的第一课.c  260-数数小木块.c  266-字符串逆序输出.c  273-字母小游戏.c  275-队花的烦恼一.c  28-大数阶乘.c  39-水仙花数.c  41-三个数从小到大排序.c  457-大小写互换.c  463-九九乘法表.c  56-阶乘分解因数（1）.c  596-谁是最好的Coder.c  (+3 more)
hello-algo/: CMakeLists.txt1
hello-algo/代码资料/: CMakeLists.txt
hello-algo/代码资料/chapter_graph/: graph_adjacency_list.cpp
labuladong/二叉树/: a.out  binary_tree.h  generateBinaryNumber.cpp  template.h
leetcode/: 1.两数之和.cpp  167.两数之和-ii-输入有序数组-2.c  167.两数之和-ii-输入有序数组.cpp  2.两数相加.c  42.接雨水.cpp  509.斐波那契数.c
pat/: CMakeLists.txt
pat/ABInHogwarts/: CMakeLists.txt  main.cpp
pat/AcuteStroke/: CMakeLists.txt  main.cpp
pat/AllRoadsLeadToRome/: CMakeLists.txt  main.cpp
pat/BuildABinarySearchTree/: CMakeLists.txt  main.cpp
pat/CarsOnCampus/: CMakeLists.txt  main.cpp
pat/ForwardsOnWeibo/: CMakeLists.txt  main.cpp
pat/HighestPriceInSupplyChain/: CMakeLists.txt  main.cpp
pat/Kuchiguse/: CMakeLists.txt  main.cpp
pat/MiceAndRice/: CMakeLists.txt  main.cpp
pat/PublicBikeManagement/: CMakeLists.txt  main.cpp
pat/StudentListForCourse/: CMakeLists.txt  main.cpp
pat/TemporaryTest/: CMakeLists.txt  main.cpp
pat/TheLargestGeneration/: CMakeLists.txt  main.cpp
problems/: 1.两数之和.cpp  100.相同的树.cpp  1008.前序遍历构造二叉搜索树.cpp  101.对称二叉树.cpp  1011.在-d-天内送达包裹的能力.cpp  1019.链表中的下一个更大节点.cpp  1022.从根到叶的二进制数之和.cpp  104.二叉树的最大深度.cpp  1046.最后一块石头的重量.py  1047.删除字符串中的所有相邻重复项.cpp  1049.最后一块石头的重量-ii.py  105.从前序与中序遍历序列构造二叉树.cpp  106.从中序与后序遍历序列构造二叉树.cpp  107.二叉树的层序遍历-ii.cpp  1094.拼车.cpp  110.平衡二叉树.cpp  1109.航班预订统计.cpp  111.二叉树的最小深度.cpp  112.路径总和.cpp  113.路径总和-ii.cpp  114.二叉树展开为链表.cpp  1143.最长公共子序列.py  119.杨辉三角-ii.cpp  1254.统计封闭岛屿的数目.py  1261.在受污染的二叉树中查找元素.cpp  129.求根节点到叶节点数字之和.cpp  1314.矩阵区域和.cpp  1325.删除给定值的叶子节点.cpp  1379.找出克隆二叉树中的相同节点.cpp  141.环形链表.cpp  142.环形链表-ii.cpp  143.重排链表.cpp  1457.二叉树中的伪回文路径.cpp  146.lru-缓存.cpp  150.逆波兰表达式求值.cpp  151.反转字符串中的单词.cpp  155.最小栈.cpp  160.相交链表.cpp  1609.奇偶树.cpp  167.两数之和-ii-输入有序数组.cpp  (+126 more)
src/: CMakeLists.txt
src/chapter_graph/: graph_adjacency_list_test.cpp  graph_adjacency_matrix.cpp  graph_bfs.cpp  graph_dfs.cpp
src/chat-room/: DoubleLinkList.c  DoubleLinkList.h  LinkQueue.c  LinkQueue.h  StdTcp.c  StdTcp.h  StdThread.c  StdThread.h  ThreadPool.c  ThreadPool.h  main.c  makefile  passwd.c  socket.c  tcp_client.c  tcp_server.c
src/template/: 1-01背包.cpp  3-快速幂取余.py  4-交集-差集-并集.py  5-Counter.py
src/utils/: print_utils.hpp  tree_node.hpp
yxc/: README.md
刷题/: 1.两数之和.cpp  21.合并两个有序链表.cpp  86.分隔链表.cpp
蓝桥杯复习/2024/: README.md
蓝桥杯复习/template/: 2-BFS_Queue.py  3-快速幂取余.py
(+891 files in other folders)
